Added decompression for LZ; reworked Huffman; none of it works properly