@@ -1,43 +1,68 @@
 package Arbeidskrav_8;
 
 import java.io.*;
-import java.nio.file.Files;
 
 public class Compression {
     public static void main(String[] args) throws IOException {
-        Bytes bytes = new Bytes("./opg8-2021.pdf", "LempelZiv");
+        Bytes bytes = new Bytes("./test.txt");
         byte[] data = bytes.getData();
-        lempelZiv(data, bytes);
+        compress(data, bytes);
+        bytes.readNewFile("./testHuffman.txt");
+        data = bytes.getData();
+        //deCompress(data, bytes);
 
     }
 
-    public static void lempelZiv(byte[] data, Bytes bytes) throws IOException {
-        LempelZiw lempelZiw = new LempelZiw(data);
-        byte[] compressedArrayLZ = lempelZiw.lZ();
-        bytes.writeCompressed(compressedArrayLZ);
+    public static void compress(byte[] data, Bytes bytes) throws IOException {
+        /*LempelZiw lempelZiw = new LempelZiw(data);
+        byte[] compressedArrayLZ = lempelZiw.lZ();*/
+        Huffman huffman = new Huffman(data);
+        byte[] compressedHuffman = huffman.compressHuff();
+
+        bytes.writeToFile(compressedHuffman, "Huffman");
     }
+
+    public static void deCompress(byte[] data, Bytes bytes) throws IOException {
+/*        LempelZiw LZ = new LempelZiw(data);
+        byte[] deCompressedLZ = LZ.deCompress(data);*/
+
+        Huffman huffman = new Huffman(data);
+        byte[] deCompressedHuff = huffman.deCompress();
+
+        bytes.writeToFile(deCompressedHuff, "deCompressedHuff");
+
+        //bytes.writeToFile(deCompressedLZ, "deCompressedLZ");
+    }
+
 }
 
 
 
 class Bytes {
     private byte[] data;
-    private final File input;
-    private final File output;
+    private DataInputStream input;
+    private DataOutputStream output;
+    private String pathToFile;
 
-    public Bytes(String pathToFile, String method) throws IOException {
-        this.input = new File(pathToFile);
-        this.output = new File("./opg8-2021LZ.pdf");
-        data = Files.readAllBytes(input.toPath());
+    public Bytes(String pathToFile) throws IOException {
+        this.pathToFile = pathToFile;
+        readNewFile(pathToFile);
+    }
+
+    public void readNewFile(String pathToFile) throws IOException {
+        this.input = new DataInputStream(new BufferedInputStream(new FileInputStream(pathToFile)));
+        data = input.readAllBytes();
     }
 
     public byte[] getData() {
         return data;
     }
 
-    public void writeCompressed(byte[] byteArray) throws IOException {
-        FileOutputStream fos = new FileOutputStream(output);
-        fos.write(byteArray);
+    public void writeToFile(byte[] byteArray, String method) throws IOException {
+        this.output = new DataOutputStream(new BufferedOutputStream(new FileOutputStream(new StringBuilder(pathToFile).insert((pathToFile.length()-4), method).toString())));
+
+        output.write(byteArray);
+        output.flush();
     }
 
     public void printBytes(){
